--- a/INTERFACES/ASSIGMENT 6/Práctica3_Flexbox.css
+++ b/INTERFACES/ASSIGMENT 6/Práctica3_Flexbox.css
@@ -1,19 +1,17 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 0%;
 }
 
 /* Estilos para el body */
 body {
   color: white;
-  padding: 2em;
+  padding:2em 2em;
 }
 
 /* Estilos generales para la lista y sus elementos */
 .sectionLista {
   list-style: none;
-  padding: 0px;
-  margin: 0px;
 
   a {
     list-style: none;
@@ -24,6 +22,7 @@ body {
 
 /* Estilos para el header */
 header {
+  padding: 0.5em 0em;
 
 /* Estilos para la lista del header */
   .sectionLista {
@@ -31,7 +30,6 @@ header {
     flex-direction: row;
     justify-content: end;
     gap: 1em;
-    padding: 1em 0em;
 
     * {
       font-weight: bold;
@@ -48,8 +46,7 @@ header {
 /* Estilos para el main */
 main {
   background-color: #09090b;
-  height: 90vh;
-  width: 90vw;
+  height: 87.5dvh;
   padding: 2em 2em;
 
   /* Estilos para el nav del main */
@@ -57,25 +54,20 @@ main {
     display: flex;
     height: 10%;
 
+    /* Estilos para la imagen del logo */
+    img {
+      cursor: pointer;
+      margin-right: 2em;
+    }
+
     /* Estilos para la primera lista del nav */
     .sectionLista:nth-of-type(1) {
       display: flex;
       align-items: center;
       gap: 2.5em;
       
-      /* Estilos para la imagen del logo */
-      img {
-        width: 25%;
-        cursor: pointer;
-        transition: all 0.5s ease;
-        
-        &:hover {
-          transform: scale(1.15);
-        }
-      }
-      
       /* Estilos para el resto de elemnentos */
-      *:not(img) {
+      * {
         cursor: pointer;
         border-radius: 5px;
         font-weight: bold;
@@ -86,6 +78,7 @@ main {
           box-shadow: 0px 0px 10px #09090b;
         }
       }
+
     }
     
     /* Estilos para la segunda lista del nav */
@@ -93,6 +86,7 @@ main {
       display: flex;
       align-items: center;
       gap: 1.5em;
+      margin-left: auto;
       
       /* Estilos generales para los botones de esta lista */
       button {
@@ -140,12 +134,13 @@ main {
       align-items: center;
       justify-content: center;
       width: 50%;
-      gap: 2.5em;
+      gap: 2em;
 
       /* Estilos para el parrafo y el h1 */
       p,
       h1 {
         width: 100%;
+        word-wrap: break-word;
       }
 
       /* Estilos para la section de el contenido */
@@ -193,33 +188,96 @@ main {
   footer {
     display: flex;
     flex-direction: row;
-    height: 10%;
 
     /* Estilos para la lista del footer */
     .sectionLista {
+      width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
 
       /* Estilos para el parrafo de la lista */
       p {
-        width: 20%;
-        text-align: end;
+        width: 15%;
+        word-wrap: break-word;
+        text-align: center;
       }
 
       /* Estilos para las imagenes de la lista */
       img {
-        width: 3%;
+        min-width:40px;
+        min-height:40px;
+        max-width: 70px;
+        max-height: 70px;
+        width: auto;
+        height: auto;
+        
         filter: invert(100%);
         cursor: pointer;
         transition: all 0.5s ease;
 
         &:hover {
-          transform: scale(1.25);
+          transform: scale(1.35);
         }
       }
     }
   }
 }
 
+/* RESPONSIVE EN TABLETS */
+@media (max-width: 965px) {
+
+  /* AJUSTE DEL MAIN */
+  main {
+    background-color: #09090b;
+    height: 87.5dvh;
+    padding: 2em 2em;
+    padding: 2em 2em;
+  
+    nav {
+      flex-direction: column;
+      align-items: center;
+
+      /* AJUSTE DEL LOGO */
+      #logo {
+        max-width: 400px;
+        width: auto;
+      }
+
+      /* AJUSTE DE LA PRIMERA SECCIÓN DEL NAV */
+      .sectionLista:nth-of-type(1) {
+        align-items: center;
+        justify-content: center;
+        margin-bottom:1.5em;
+      }
+    
+      /* AJUSTE DE LA SEGUNDA SECCIÓN DEL NAV */
+      .sectionLista:nth-of-type(2) {
+        justify-content: center;
+        width: 100%;
+      }
+    }
+
+    .contenidoPrincipal {
+      article {
+        margin-top: 8em;
+      }
+    }
+
+    footer {
+      /* Ajuste de la sección del footer */
+      .sectionLista {
+        flex-direction: row;
+        width: 100%;
+        gap: 1em;
+      }
+    
+      /* Ajuste de imágenes */
+      img {
+        min-width:40px;
+        min-height:40px;
+      }
+    }
+  }
+}
 
