--- a/INTERFACES/ASSIGMENT 6/Práctica3_Flexbox.css
+++ b/INTERFACES/ASSIGMENT 6/Práctica3_Flexbox.css
@@ -1,14 +1,38 @@
 * {
   box-sizing: border-box;
-  margin: 0%;
+  margin: 0;
+
+  /* ESTILOS DE BORDE PARA ESTOS ELEMENTOS */
+  p, h1, a:not(header a) {
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 
+    1px -1px 0 #000, -1px 1px 0 #000, 0 0 4px #000;
+  }
+  
 }
 
 /* ESTILOS PARA EL BODY */
 body {
   color: white;
   padding:2em 2em;
+  position: relative;
 }
 
+/* APLICACIONES DE OPACIDAD EN LA BACKGROUND IMAGE */
+body::before {
+  content: "";
+  position: absolute;
+  top: 4em;
+  left: 2em;
+  right: 2em;
+  bottom: 2em;
+  background-image: url('background.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.75;
+  z-index: -1;
+  box-sizing: border-box;
+  }
+  
 /* ESTILOS GENERALES PARA LA LISTA Y SUS ELEMENTOS */
 .sectionLista {
   list-style: none;
@@ -45,7 +69,6 @@ header {
 
 /* ESTILOS PARA EL MAIN */
 main {
-  background-color: #09090b;
   height: 87.5dvh;
   padding: 2em 2em;
 
@@ -58,6 +81,11 @@ main {
     a img {
       max-width: 200px;
       margin-right: 2em;
+      cursor: pointer;
+      filter: drop-shadow(1px 1px 0px black)
+      drop-shadow(-1px -1px 0px black)
+      drop-shadow(1px -1px 0px black)
+      drop-shadow(-1px 1px 0px black);
     }
 
     /* ESTILOS PARA LA PRIMERA LISTA DEL NAV */
@@ -66,7 +94,7 @@ main {
       align-items: center;
       gap: 2.5em;
       
-      /* ESTILOS PARA EL RESTO DE ELEMNENTOS */
+      /* ESTILOS PARA EL RESTO DE ELEMENTOS */
       * {
         cursor: pointer;
         border-radius: 5px;
@@ -75,10 +103,8 @@ main {
         
         &:hover {
           transform: scale(1.25);
-          box-shadow: 0px 0px 10px #09090b;
         }
       }
-
     }
     
     /* ESTILOS PARA LA SEGUNDA LISTA DEL NAV */
@@ -114,7 +140,6 @@ main {
         background-color: #09090b;
         border: 1.5px solid #fff;
       }
-
     }
   }
 
@@ -156,7 +181,7 @@ main {
 
         /* ESTILOS PARA EL INPUT*/
         #inputSuscripcion {
-          border: 1px solid #fff;
+          border: 1px solid #000000;
 
           &:focus {
             outline: none;
@@ -168,7 +193,7 @@ main {
           font-weight: bold;
           color: #09090b;
           background-color: #fff;
-          border: 1px solid #fff;
+          border: 1px solid #000000;
           transition: all 0.5s ease;
 
           &:hover {
@@ -189,19 +214,20 @@ main {
     display: flex;
     flex-direction: row;
 
+    /* ESTILOS PARA EL PARRAFO DE LA LISTA */
+    p {
+      word-wrap: break-word;
+      text-align: center;
+      align-content: center;
+      width: 15%;
+    }
+
     /* ESTILOS PARA LA LISTA DEL FOOTER */
     .sectionLista {
       width: 100%;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-
-      /* ESTILOS PARA EL PARRAFO DE LA LISTA */
-      p {
-        width: 15%;
-        word-wrap: break-word;
-        text-align: center;
-      }
 
       /* ESTILOS PARA LAS IMAGENES DE LA LISTA */
       img {
@@ -211,10 +237,9 @@ main {
         max-height: 70px;
         width: auto;
         height: auto;
-        
-        filter: invert(100%);
         cursor: pointer;
         transition: all 0.5s ease;
+        filter: invert(1);
 
         &:hover {
           transform: scale(1.35);
@@ -226,14 +251,8 @@ main {
 
 /* RESPONSIVE EN TABLETS */
 @media (max-width: 965px) {
-
   /* AJUSTE DEL MAIN */
   main {
-    background-color: #09090b;
-    height: 87.5dvh;
-    padding: 2em 2em;
-    padding: 2em 2em;
-  
     nav {
       flex-direction: column;
       align-items: center;
@@ -242,6 +261,7 @@ main {
       #logo {
         max-width: 400px;
         width: auto;
+        margin-right: 0em;
       }
 
       /* AJUSTE DE LA PRIMERA SECCIÓN DEL NAV */
@@ -262,14 +282,30 @@ main {
       article {
         margin-top: 8em;
       }
+
+      * {
+        width: 75%;
+      }
     }
 
     footer {
       /* AJUSTE DE LA SECCIÓN DEL FOOTER */
+
+      display: flex;
+      flex-direction: column;
+      margin: -1.5em auto;
+
+      p {
+        text-align: center;
+        margin-bottom:1em;
+        width: 100%;
+      }
+
       .sectionLista {
         flex-direction: row;
-        width: 100%;
         gap: 1em;
+        margin: auto;
+        justify-content: center;
       }
     
       /* AJUSTE DE IMÁGENES */
