--- a/SERVER/UNIT 6/ASSIGMENT 1/MvcAgenda/MvcAgenda/Views/Empleados/Edit.cshtml
+++ b/SERVER/UNIT 6/ASSIGMENT 1/MvcAgenda/MvcAgenda/Views/Empleados/Edit.cshtml
@@ -24,6 +24,16 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Teléfono" class="control-label"></label>
+                <input asp-for="Teléfono" class="form-control" />
+                <span asp-validation-for="Teléfono" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DepartamentoId" class="control-label"></label>
                 <select asp-for="DepartamentoId" class="form-control" asp-items="ViewBag.DepartamentoId"></select>
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
