--- a/INTERFACES/ASSIGMENT 5/grid-repaso.css
+++ b/INTERFACES/ASSIGMENT 5/grid-repaso.css
@@ -1,11 +1,9 @@
 main {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0.1fr, 1fr));
-    grid-template-rows: repeat(3, minmax(0.1fr, 1fr));
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     height: 70dvh;
-    width: 90dvw;
     background-color: #555;
-    
     gap: 2em;
     padding: 2em;
 }
@@ -14,11 +12,6 @@ section, aside {
     text-align: center;
     gap: 1em;
     padding: 1em;
-    
-    section > *, aside > * {
-        width: 100%;
-        height: 100%;
-    }
 }
 
 aside {
@@ -27,8 +20,8 @@ aside {
     background-color: #999;
 
     display: grid;
-    grid-template-columns: minmax(0.1fr, 1fr);
-    grid-template-rows: repeat(5, minmax(0.1fr, 1fr));
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
 
     .a_item1 {
         grid-column: 1;
@@ -57,8 +50,8 @@ section:nth-of-type(1) {
     grid-row: 1; */
 
     /* display: grid;
-    grid-template-columns: repeat(6, minmax(0.1fr, 1fr));
-    grid-template-rows: repeat(2, minmax(0.1fr, 1fr)); */
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr); */
 
     /* .s1_item1 {
         grid-column: 1 / span 2;
@@ -92,7 +85,7 @@ section:nth-of-type(1) {
     
     display: flex;
     flex-direction: column;
-    width: calc(200% - 3.5em);
+    width: 200%;
 
     ul {
         padding: 0;
@@ -102,7 +95,6 @@ section:nth-of-type(1) {
     
     ul:first-of-type {
         display: flex;
-        flex-direction: row;
         height: 100%;
 
         .s1_item1,
