--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Shared/_Layout.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Shared/_Layout.cshtml
@@ -25,7 +25,11 @@
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area=""
-                                       asp-controller="Home" asp-action="Privacy">Privacidad</a>
+                                       asp-controller="MisDatos" asp-action="Edit">Mis Datos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area=""
+                                       asp-controller="MisAvisos" asp-action="Index">Mis Avisos</a>
                                 </li>
                             }
                             @if (User.IsInRole("Administrador"))
@@ -50,6 +54,10 @@
                                     <a class="nav-link text-dark" asp-area=""
                                        asp-controller="Empleados" asp-action="Index">Empleados</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area=""
+                                       asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                                </li>
                             }
                         }
                         else
@@ -57,6 +65,11 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area=""
                                    asp-controller="Home" asp-action="Index">Inicio</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                   asp-controller="Home" asp-action="Privacy">Privacidad</a>
                             </li>
                         }
                     </ul>
