--- a/INTERFACES/ASSIGMENT 8/components/main/main.css
+++ b/INTERFACES/ASSIGMENT 8/components/main/main.css
@@ -1,140 +1,3 @@
-:root {
-    --primary-color: #09090b;
-    --secondary-color: #fff;
-    --highlight-color: #09090b;
-    --shadow-color: rgba(0, 0, 0, 0.2);
-    --header-background: rgba(255, 255, 255, 1);
-    --font-family: 'Poppins', sans-serif;
-
-    --grid-image-1: url('../assets/gridContainer1.png');
-    --grid-image-2: url('../assets/gridContainer2.png');
-    --grid-image-3: url('../assets/gridContainer3.png');
-    --grid-image-4: url('../assets/gridContainer4.png');
-    --grid-image-5: url('../assets/gridContainer6.png');
-    --grid-image-6: url('../assets/gridContainer7.png');
-    --grid-image-7: url('../assets/gridContainer8.png');
-    --grid-image-8: url('../assets/gridContainer9.png');
-    --grid-image-9: url('../assets/gridContainer10.png');
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-}
-
-body {
-    font-family: var(--font-family);
-    color: var(--secondary-color);
-    background: var(--primary-color);
-}
-
-p:not(.f3-4_c4-5 > *), h1, a:not(header a) {
-    text-shadow: 1px 1px 4px var(--primary-color), 
-                -1px -1px 4px var(--primary-color);
-}
-
-header {
-    padding: 0.75em 2em;
-    background: var(--header-background);
-    box-shadow: 0px 4px 10px var(--primary-color);
-
-    position: sticky;
-    top: 0;
-    z-index: 100;
-
-    .sectionLista {
-        display: flex;
-        justify-content: flex-end;
-        gap: 1.5em;
-
-        a {
-            font-weight: bold;
-            color: var(--primary-color);
-            transition: transform 0.3s ease, color 0.3s ease;
-        }
-        
-        a:hover {
-            transform: scale(1.1);
-            color: var(--primary-color);
-        }
-    } 
-}
-
-nav {
-    position: sticky;
-    top: 4.75%;
-    bottom: 0;
-    z-index: 100;
-
-    display: flex;
-    align-items: center;
-    padding: 0.75em 2em;
-    background: var(--primary-color);
-    box-shadow: 0px 4px 10px var(--shadow-color);
-
-    font-weight: bold;
-
-    a img {
-        max-width: 225px;
-        transition: transform 0.5s ease;
-        margin-right: 1em;
-    }
-
-    a img:hover {
-        transform: scale(1.1);
-    }
-
-    .sectionLista:nth-of-type(1) {
-        display: flex;
-        gap: 1em;
-        a {
-            padding: 0.5em 1.5em;
-            color: var(--secondary-color);
-            border-radius: 5px;
-            transition: background 0.3s ease, transform 0.3s ease;
-        }
-
-        a:hover {
-            background: var(--secondary-color);
-            color: var(--primary-color);
-            text-shadow: none;
-            transform: scale(1.1);
-        }
-    }
-
-    .sectionLista:nth-of-type(2) {
-        display: flex;
-        gap: 1.5em;
-        margin-left: auto;
-
-        button {
-            padding: 0.5em 2em;
-            color: var(--secondary-color);
-            border-radius: 5px;
-            border: none;
-            background: var(--primary-color);
-            transition: transform 0.3s ease;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        button:hover {
-            transform: scale(1.1);
-        }
-
-        #botonRegistro {
-            background: var(--secondary-color);
-            color: var(--primary-color);
-        }
-
-        #botonInicio {
-            border: 1px solid var(--secondary-color);
-        }
-    }
-}
-
 .containerGrid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -165,6 +28,10 @@ nav {
 
     button {
         cursor: pointer;
+        font-size: 1em;
+        padding: 2em;
+        font-weight: bold;
+        text-wrap: balance;
     }
 
     .f1-2_c1-2 {
@@ -175,7 +42,7 @@ nav {
         &:hover {
             background-color: var(--primary-color);
             color: var(--secondary-color);
-            border: 1px solid var(--secondary-color);
+            border: 2px solid var(--secondary-color);
             font-weight: bold;
             font-size: 1em;
         }
@@ -210,7 +77,7 @@ nav {
         &:hover {
             background-color: var(--primary-color);
             color: var(--secondary-color);
-            border: 1px solid var(--secondary-color);
+            border: 2px solid var(--secondary-color);
             font-weight: bold;
             font-size: 1em;
         }
@@ -245,7 +112,7 @@ nav {
         &:hover {
             background-color: var(--primary-color);
             color: var(--secondary-color);
-            border: 1px solid var(--secondary-color);
+            border: 2px solid var(--secondary-color);
             font-weight: bold;
             font-size: 1em;
         }
@@ -307,10 +174,11 @@ nav {
                 transform: scale(0.85);
                 background: var(--secondary-color);
                 color: var(--primary-color);
-                border: 1px solid var(--primary-color);
+                border: 2px solid var(--primary-color);
 
                 .f3-4_c4-5:has(&:hover) {
                     background-color: var(--highlight-color);
+                    border: 2px solid var(--secondary-color);
 
                     #botonInfo {
 
@@ -323,38 +191,6 @@ nav {
 
                 }
             }
-        }
-
-    }
-}
-
-footer {
-    position: sticky;
-    bottom: 0;
-    padding: 2.5em;
-    z-index: 100;
-
-    background: var(--primary-color);
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    gap: 1.5em;
-
-    box-shadow: 0px -4px 10px var(--shadow-color);
-
-    .sectionLista {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-
-        img {
-            width: 50px;
-            filter: invert();
-            transition: transform 0.3s ease, filter 0.3s ease;
-        }
-
-        img:hover {
-            transform: scale(1.2);
         }
     }
 }
